Docs: Add Proxy configuration guide and environment variables

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ HOST=0.0.0.0
 
 # Logging
 # LOG_LEVEL=info
+
+# Proxy Settings (Optional - used to bypass IP blocks)
+# PROXY_SERVER=http://proxy-host:port
+# PROXY_USERNAME=username
+# PROXY_PASSWORD=password
